# jina-reader-extension

./: .gitignore  Cargo.toml  extension.toml
src/: lib.rs
